# game-of-life

./: .gitmodules  CMakeLists.txt  README.md  kernel.cu  main-benchmark.cpp  main-gui.cpp  reference.hpp  solver.hpp  utils.cpp  utils.hpp
